--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="center">
         <p>Your help is needed across the universe to expand humanity's influence. Enroll now to be part of the greatest force known to mankind!</p>
-        <p>Come join the greatest power and explore the galaxy </p>
+        <p>Come join the greatest power known to mankind and explore the galaxy.</p>
         </div>
 
         <div class="right">
